--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "less": "^3.0.4",
-    "less-loader": "^5.0.0"
+    "less-loader": "^5.0.0",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0"
   },
   "eslintConfig": {
     "root": true,
